--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,9 @@ agp = "8.7.3"
 kotlin = "2.1.0"
 
 compose = "1.7.3"
+compose-bom = "2024.12.01"
 compose-runtime = "1.7.6"
+compose-activity = "1.9.2"
 composeCompiler = "1.5.15"
 
 androidx-appcompat = "1.7.0"
@@ -13,7 +15,16 @@ android-min = "24"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat"}
+
+# compose
+compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom"}
+compose-material3 = { module = "androidx.compose.material3:material3" }
 compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose-runtime" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+compose-activity = { module = "androidx.activity:activity-compose", version.ref = "compose-activity"}
+# compose debug
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling"}
+
 
 [plugins]
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
