delete useless ui component

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,12 +9,17 @@ compose-activity = "1.9.2"
 composeCompiler = "1.5.15"
 
 androidx-appcompat = "1.7.0"
+androidx-credentials = "1.3.0"
+
+google-identity = "1.1.1"
 
 android-target = "35"
 android-min = "24"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat"}
+androidx-credentials = { group = "androidx.credentials", name = "credentials", version = "androidx-credentials" }
+androidx-credentials-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version = "androidx-credentials" }
 
 # compose
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "compose-bom"}
@@ -24,6 +29,8 @@ compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview"
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "compose-activity"}
 # compose debug
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling"}
+# google oauth
+google-identity = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "google-identity" }
 
 
 [plugins]
