--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,9 +9,10 @@ compose-activity = "1.9.2"
 composeCompiler = "1.5.15"
 
 androidx-appcompat = "1.7.0"
-androidx-credentials = "1.3.0"
+flowmvi = "3.1.0"
 
-google-identity = "1.1.1"
+essenty = "2.4.0"
+decompose = "3.2.2"
 
 android-target = "35"
 android-min = "24"
@@ -26,6 +27,17 @@ compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview"
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "compose-activity"}
 # compose debug
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling"}
+# flowmvi
+flowmvi-core = { module = "pro.respawn.flowmvi:core", version.ref = "flowmvi" }
+flowmvi-compose = { module = "pro.respawn.flowmvi:compose", version.ref = "flowmvi" }
+flowmvi-essenty = { module = "pro.respawn.flowmvi:essenty", version.ref = "flowmvi" }
+flowmvi-essenty-compose = { module = "pro.respawn.flowmvi:essenty-compose", version.ref = "flowmvi" }
+# Essenty
+essenty-instanceKeeper = { module = "com.arkivanov.essenty:instance-keeper", version.ref = "essenty" }
+essenty-lifecycle = { module = "com.arkivanov.essenty:lifecycle", version.ref = "essenty" }
+# Decompose
+decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
+decompose-jetbrains-compose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
 
 [plugins]
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
