--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ flowmvi = "3.1.0"
 essenty = "2.4.0"
 decompose = "3.2.2"
 
+koin = "4.0.1"
+
 android-target = "35"
 android-min = "24"
 
@@ -38,6 +40,9 @@ essenty-lifecycle = { module = "com.arkivanov.essenty:lifecycle", version.ref = 
 # Decompose
 decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose-jetbrains-compose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
+# Koin
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 
 [plugins]
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
